# IRIS

./: .env.example  .gitignore  FREE_SETUP.md  QUICK_START.md  README.md  demo_claude.py  main.py  pyproject.toml  requirements.txt  setup.sh  test_voice_pipeline.py
.github/workflows/: tests.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  COMMANDS.md  CONFIGURATION.md  CONTRIBUTING.md  DEVELOPMENT.md  FAQ.md  FRIDAY_PRO_GUIDE.md  INSTALLATION.md  PERFORMANCE.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md
src/: __init__.py  config.py
src/core/: __init__.py  claude_client.py  friday.py  ollama_client.py  tool_router.py
src/memory/: __init__.py  database.py
src/tools/: __init__.py  base.py  examples.py
src/voice/: __init__.py  audio_recorder.py  synthesis.py  transcriber.py  voice_manager.py  wake_word.py
tests/: __init__.py  test_config.py
