[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "friday-assistant"
version = "1.0.0"
description = "Female Replacement Intelligent Digital Assistant Youth - Voice Assistant Framework"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "HARSHAN-DEVHUB"}
]
keywords = [
    "voice-assistant",
    "ai",
    "speech-to-text",
    "text-to-speech",
    "claude",
    "anthropic"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/HARSHAN-DEVHUB/IRIS"
Repository = "https://github.com/HARSHAN-DEVHUB/IRIS"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
